CFN/yoda.oraec2.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Yoda build Oracle DB on EC2 from AMI

Parameters:
  LinuxAmiId:
    Type: AWS::EC2::Image::Id
    # Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2
    # Default: 517858444145/Yoda-version2
    Default: ami-08355ef0bf95265a8  
  KeyPairName:
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: AWS::EC2::KeyPair::KeyName 
  OracleInstanceType:
    AllowedValues:
      - t3.xlarge
      - m5.xlarge
      - r5.xlarge
    ConstraintDescription: Must be a valid EC2 instance type.
    Default: t3.xlarge
    Description: Choose your Oracle Database instance type.
    Type: String
  VPCID:
    Description: ID of the VPC (e.g., vpc-9abec3e0)
    Type: AWS::EC2::VPC::Id
  LaptopIp: 
    Type: String
    Description: My laptop ip address

Resources:

  ec2ServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: ec2Server Security Group
      GroupDescription: Enable SSH (port 22) and Oracle Database (port 1521) to ec2Server
      VpcId: !Ref VPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Sub '${LaptopIp}/32'
        - IpProtocol: tcp
          FromPort: 1521
          ToPort: 1521
          CidrIp: !Sub '${LaptopIp}/32'

  ec2Server:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref LinuxAmiId
      InstanceType: !Ref OracleInstanceType
      KeyName: !Ref KeyPairName 
      SecurityGroupIds:
        - !Ref ec2ServerSecurityGroup
      Tags: 
        - Key: Owner
          Value: !Ref "AWS::AccountId"
        - Key: Name
          Value: "migration lab"     

   
Outputs:
  Region:
    Value: !Ref AWS::Region
    Description: ec2 Server Region
  EC2InstanceID:
    Value: !Ref ec2Server
    Description: The EC2 Instance ID
